--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_multiple_root.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_multiple_root.xml
@@ -10,20 +10,19 @@
     <TextView
         android:id="@+id/Newton"
 
-        android:layout_width="231dp"
-        android:layout_height="40dp"
+        android:layout_width="270dp"
+        android:layout_height="36dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Newton Method"
+        android:text="Multiple Root Method"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/ap_black"
         android:textSize="25dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
