--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_regla_falsa.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_regla_falsa.xml
@@ -49,8 +49,8 @@
 
     <TextView
         android:id="@+id/Resultado"
-        android:layout_width="224dp"
-        android:layout_height="30dp"
+        android:layout_width="323dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -58,9 +58,10 @@
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Calculo"
-        app:layout_constraintVertical_bias="0.346" />
+        app:layout_constraintVertical_bias="0.106" />
 
     <Button
         android:id="@+id/Calculo"
