--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_graficarfuncion.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_graficarfuncion.xml
@@ -8,41 +8,12 @@
     tools:context="com.androidplot.demos.graficarfuncionActivity">
 
     <EditText
-        android:id="@+id/LimitA"
-        android:layout_width="92dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="124dp"
-        android:ems="10"
-        android:hint="Limit"
-        android:inputType="textPersonName"
-        android:textColor="@color/ap_black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/LimitB"
-        android:layout_width="79dp"
-        android:layout_height="38dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="124dp"
-        android:ems="10"
-        android:hint="Limit"
-        android:inputType="textPersonName"
-        android:textColor="@color/ap_black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.727"
-        app:layout_constraintStart_toEndOf="@+id/LimitA"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/Funcion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="232dp"
+        android:layout_marginTop="132dp"
         android:ems="10"
         android:hint="Function to graph"
         android:inputType="textPersonName"
@@ -51,31 +22,6 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="8dp"
-        android:text="Limit -x"
-        android:textColor="@color/ap_black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="84dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Limit  x"
-        android:textColor="@color/ap_black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView5"
@@ -92,12 +38,12 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="245dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:text="Valores a graficar"
+        android:text="Write a function"
         android:textColor="@color/ap_black"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
