--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_puntofijo.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_puntofijo.xml
@@ -56,11 +56,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/ap_black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/Stefensen"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Calculo"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/Calculo"
@@ -127,7 +128,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Resultado"
-        app:layout_constraintVertical_bias="0.13" />
+        app:layout_constraintVertical_bias="0.939" />
 
     <EditText
         android:id="@+id/Tolerancia"
@@ -162,5 +163,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Calculo"
-        app:layout_constraintVertical_bias="0.169" />
+        app:layout_constraintVertical_bias="0.354" />
+
+    <TextView
+        android:id="@+id/StefensenResult"
+        android:layout_width="350dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Stefensen"
+        app:layout_constraintVertical_bias="0.106" />
 </android.support.constraint.ConstraintLayout>
