--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_multiple_root.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_multiple_root.xml
@@ -130,8 +130,8 @@
 
     <EditText
         android:id="@+id/Tolerancia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="153dp"
+        android:layout_height="39dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -142,7 +142,7 @@
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.037"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/xini"
         app:layout_constraintVertical_bias="0.041" />
@@ -183,4 +183,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/derivada"
         app:layout_constraintVertical_bias="0.068" />
+
+    <Switch
+        android:id="@+id/switchARM"
+        android:layout_width="168dp"
+        android:layout_height="29dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Switch"
+        android:textOff="Relative"
+        android:textOn="Absolute"
+        app:layout_constraintBottom_toTopOf="@+id/derivada"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.29"
+        app:layout_constraintStart_toEndOf="@+id/Tolerancia"
+        app:layout_constraintTop_toBottomOf="@+id/xini"
+        app:layout_constraintVertical_bias="0.8" />
 </android.support.constraint.ConstraintLayout>
