--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_graph.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_graph.xml
@@ -79,9 +79,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:textColorHint="@color/ap_white"
         android:ems="10"
+        android:hint="LimitB"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/borrar"
         app:layout_constraintHorizontal_bias="0.108"
@@ -98,8 +99,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:textColorHint="@color/ap_white"
+        android:hint="LimitA"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.033"
