--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_graph.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_graph.xml
@@ -17,8 +17,10 @@
         android:background="@color/ap_charcoal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/Graficar"
@@ -32,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/funcion"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/funcion"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -53,7 +55,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.858" />
+        app:layout_constraintVertical_bias="0.888" />
 
     <Button
         android:id="@+id/borrar"
@@ -66,35 +68,35 @@
         android:text="Clean"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/Graficar"
-        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/funcion"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/LimitGB"
-        android:layout_width="120dp"
-        android:layout_height="44dp"
+        android:layout_width="85dp"
+        android:layout_height="39dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="248dp"
         android:layout_marginTop="8dp"
-        android:textColorHint="@color/ap_white"
         android:ems="10"
         android:hint="LimitB"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/borrar"
-        app:layout_constraintHorizontal_bias="0.108"
+        android:textColorHint="@color/ap_white"
+        app:layout_constraintBottom_toTopOf="@+id/funcion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.794"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LimitGA"
-        app:layout_constraintVertical_bias="0.466" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/LimitGA"
-        android:layout_width="129dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="84dp"
+        android:layout_width="103dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -102,11 +104,11 @@
         android:hint="LimitA"
         android:inputType="textPersonName"
         android:textColorHint="@color/ap_white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/funcion"
+        app:layout_constraintEnd_toStartOf="@+id/LimitGB"
+        app:layout_constraintHorizontal_bias="0.993"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9" />
+        app:layout_constraintVertical_bias="0.997" />
 
 </android.support.constraint.ConstraintLayout>
