--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_newton.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_newton.xml
@@ -10,8 +10,8 @@
     <TextView
         android:id="@+id/Newton"
 
-        android:layout_width="231dp"
-        android:layout_height="40dp"
+        android:layout_width="178dp"
+        android:layout_height="39dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -23,7 +23,7 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -42,7 +42,7 @@
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.339"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Newton"
         app:layout_constraintVertical_bias="0.0" />
@@ -183,4 +183,20 @@
         app:layout_constraintStart_toEndOf="@+id/Tolerancia"
         app:layout_constraintTop_toBottomOf="@+id/derivada"
         app:layout_constraintVertical_bias="0.625" />
+
+    <Button
+        android:id="@+id/Graficador"
+        android:layout_width="86dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Plotter"
+        app:layout_constraintBottom_toTopOf="@+id/derivada"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.777"
+        app:layout_constraintStart_toEndOf="@+id/Newton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.163" />
 </android.support.constraint.ConstraintLayout>
