--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_multiple_root.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_multiple_root.xml
@@ -10,8 +10,8 @@
     <TextView
         android:id="@+id/Newton"
 
-        android:layout_width="270dp"
-        android:layout_height="36dp"
+        android:layout_width="236dp"
+        android:layout_height="30dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -23,6 +23,7 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -44,7 +45,7 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Newton"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.042" />
 
     <TextView
         android:id="@+id/Resultado"
@@ -201,4 +202,20 @@
         app:layout_constraintStart_toEndOf="@+id/Tolerancia"
         app:layout_constraintTop_toBottomOf="@+id/xini"
         app:layout_constraintVertical_bias="0.8" />
+
+    <Button
+        android:id="@+id/Graficador"
+        android:layout_width="96dp"
+        android:layout_height="49dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Plotter"
+        app:layout_constraintBottom_toTopOf="@+id/funcion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toEndOf="@+id/Newton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.727" />
 </android.support.constraint.ConstraintLayout>
